improve JUnit5 and Mockito tests